Improved XML parser security.
XMLConstants.FEATURE_SECURE_PROCESSING = true
XMLConstants.ACCESS_EXTERNAL_DTD = ""
XMLConstants.ACCESS_EXTERNAL_STYLESHEET = ""

--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-05:00"
-		dateModified="2021-09-28T10:06:09-05:00"
+		dateModified="2021-10-05T19:51:36-05:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -54,6 +54,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 						<code:link page="/" /> only to generate page content from servlets.
 					</li>
 					<li>Updated dependencies.</li>
+					<li>Improved XML parser security.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
