Cleaning-up ThreadLocal variables when no longer used
See https://rules.sonarsource.com/java/RSPEC-5164

--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-05:00"
-		dateModified="2021-10-29T03:58:47-05:00"
+		dateModified="2021-10-31T04:10:58-05:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -54,6 +54,10 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
 						<code:link page="/" /> only to generate page content from servlets.
 					</li>
 					<li>Now properly restoring Thread interrupted state on <code>InterruptedException</code>.</li>
+					<li>
+						Cleaning-up ThreadLocal variables when no longer used,
+						see <ao:a href="https://rules.sonarsource.com/java/RSPEC-5164" />.
+					</li>
 				</ul>
 			</changelog:release>
 		</c:if>
