--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-30T18:16:13-05:00"
-    dateModified="2022-03-21T05:50:15-05:00"
+    dateModified="2022-05-02T10:25:44-05:00"
   >
     <c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
       <changelog:release
@@ -54,6 +54,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
             <code:link page="/" /> only to generate page content from servlets.
           </li>
           <li>Updated dependencies.</li>
+          <li>Renamed application-scope variables from "semanticCMS" to "semanticCms".</li>
         </ul>
       </changelog:release>
     </c:if>
