--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-30T18:16:13-05:00"
-    dateModified="2022-05-02T10:25:44-05:00"
+    dateModified="2022-05-14T01:00:48-05:00"
   >
     <c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
       <changelog:release
@@ -53,11 +53,23 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
             New module <core:link book="/core/controller" page="/" /> split from <code:link page="/" />, leaving
             <code:link page="/" /> only to generate page content from servlets.
           </li>
-          <li>Updated dependencies.</li>
-          <li>Renamed application-scope variables from "semanticCMS" to "semanticCms".</li>
         </ul>
       </changelog:release>
     </c:if>
+
+    <changelog:release
+      projectName="@{documented.name}"
+      version="1.18.3"
+      datePublished="2022-05-14T01:00:48-05:00"
+      groupId="@{project.groupId}"
+      artifactId="@{documented.artifactId}"
+      scmUrl="@{project.scm.url}"
+    >
+      <ul>
+        <li>Updated dependencies.</li>
+        <li>Renamed application-scope variable from "semanticCMS" to "semanticCms".</li>
+      </ul>
+    </changelog:release>
 
     <changelog:release
       projectName="@{documented.name}"
