--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-30T18:16:13-05:00"
-    dateModified="2023-09-26T19:00:16Z"
+    dateModified="2023-10-06T04:17:36Z"
   >
     <c:set var="latestRelease" value="1.19.1" />
     <c:if test="${
@@ -55,6 +55,7 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
       >
         <ul>
           <li>Added script support for <ao:a href="https://oss.aoapps.com/web-resources/">AO Web Resources</ao:a>.</li>
+          <li><code>PageUtils.toDateTime(Object)</code> no longer throws <code>IOException</code>.</li>
         </ul>
       </changelog:release>
     </c:if>
