--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,9 +37,9 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     shortTitle="Changelog"
     tocLevels="1"
     datePublished="2016-10-30T18:16:13-05:00"
-    dateModified="2023-10-06T04:17:36Z"
+    dateModified="2024-05-09T22:35:15Z"
   >
-    <c:set var="latestRelease" value="1.19.1" />
+    <c:set var="latestRelease" value="1.20.0" />
     <c:if test="${
       fn:endsWith('@{project.version}', '-SNAPSHOT')
       and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')
@@ -52,13 +52,22 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
         artifactId="@{documented.artifactId}"
         repository="@{nexusUrl}content/repositories/snapshots/"
         scmUrl="@{project.scm.url}"
-      >
-        <ul>
-          <li>Added script support for <ao:a href="https://oss.aoapps.com/web-resources/">AO Web Resources</ao:a>.</li>
-          <li><code>PageUtils.toDateTime(Object)</code> no longer throws <code>IOException</code>.</li>
-        </ul>
-      </changelog:release>
+      />
     </c:if>
+
+    <changelog:release
+      projectName="@{documented.name}"
+      version="1.20.0"
+      datePublished="2024-05-09T22:35:15Z"
+      groupId="@{project.groupId}"
+      artifactId="@{documented.artifactId}"
+      scmUrl="@{project.scm.url}"
+    >
+      <ul>
+        <li>Added script support for <ao:a href="https://oss.aoapps.com/web-resources/">AO Web Resources</ao:a>.</li>
+        <li><code>PageUtils.toDateTime(Object)</code> no longer throws <code>IOException</code>.</li>
+      </ul>
+    </changelog:release>
 
     <changelog:release
       projectName="@{documented.name}"
